--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^1.2.0
+  ff_navigation_bar: ^0.1.5
   auto_size_text: ^2.1.0
   http: ^0.13.0+2
+  carousel_slider: ^4.0.0
   provider: ^4.3.3
+  shimmer: ^2.0.0
   shared_preferences: ^2.0.15
 
 dev_dependencies:
@@ -75,6 +78,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/get_started.png
+    - assets/images/cherry_merah.png
+    - assets/images/cherry_putih.png
     - assets/images/login.png
     - assets/images/register.png
 
