--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,8 +39,18 @@ dependencies:
   http: ^0.13.0+2
   carousel_slider: ^4.0.0
   provider: ^4.3.3
+  url_launcher: ^6.0.10
+  firebase_messaging: ^11.2.6
+  flutter_html: ^0.11.1
   shimmer: ^2.0.0
-  shared_preferences: ^2.0.15
+  shared_preferences: ^2.0.7
+  simple_moment: ^1.1.1
+  firebase_core: ^1.1.0
+  flutter_local_notifications: ^9.5.3+1
+  google_maps_flutter: ^2.1.4
+  flutter_polyline_points: ^1.0.0
+  image_picker: ^0.8.5+3
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +67,7 @@ dev_dependencies:
 
 flutter_native_splash:
   color: "#790604"
-  image: assets/images/mobilelogo.png
+  image: assets/images/splashscreen.png
   android_gravity: center
   ios_content_mode: center
   android: true
