--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.1.7 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -51,6 +51,8 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   image_picker: ^0.8.5+3
   location: ^4.4.0
+  qr_code_scanner: ^0.3.5
+  font_awesome_flutter: ^10.2.1
 
 dev_dependencies:
   flutter_test:
@@ -90,6 +92,7 @@ flutter:
     - assets/images/get_started.png
     - assets/images/cherry_merah.png
     - assets/images/cherry_putih.png
+    - assets/images/nodata.png
     - assets/images/login.png
     - assets/images/register.png
 
